tests/integrations/basic-fail/tests/actual_tests_bless/revisions_bad.bar.stderr
error[E0601]: `main` function not found in crate `revisions_bad`
 --> $DIR/revisions_bad.rs:9:2
  |
9 | }
  |  ^ consider adding a `main` function to `$DIR/revisions_bad.rs`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
